--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,10 +36,10 @@ h3 {
 }
 
 .carousel img {
-  height: 300px;
+  height: 450px;
   padding: 30px;
   margin: 40px;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-left: auto;
   margin-right: auto;
 }
